SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_RequestPaymentPending__c/EBizCharge_RequestPaymentPending__c.object-meta.xml
<CustomObject>
    <label>EBizCharge RequestPaymentPending</label>
    <nameField>
        <label>EBizCharge RequestPaymentPending Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBizCharge RequestPaymentPending</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>