SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_RequestPaymentPending__c/fields/Payment_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Email__c</fullName>
    <label>Payment Account Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>