SFQBD/Ebiz/force-app/main/default/objects/EBizCharge_RequestPaymentPending__c/fields/Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Id__c</fullName>
    <label>Payment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>